# Systemintergration2024

./: README.md  test1.sql  test2.sql
00_Intro/: me.csv  me.json  me.xml  me.yaml  paymentiframe.html
00_Intro/HTML_with_module/: index.js  myModule.js
00_Intro/commonjs_modules/: myModules.js
00_Intro/data_formats/: me.json  me.txt
00_Intro/no_commonjs_modules/: myModules.js
00_Intro/python_module/my_module/: file_one.py
01_Intro/data_formats/: me.json  me.txt
01_Intro/no_commonjs_modules/: index.html
01_Intro/python_module/: main.py
01_data/encoding_and_decoding/python/: main.py
01_data/python_poetry/: main.py  pyproject.toml
02_Intro/HTML_with_module/: index.html
02_Intro/commonjs_modules/: index.js
02_Intro/data_formats/: me.csv
02_Intro/node_es_modules/: myModule.js
02_Intro/python_module/my_module/: file_two.py
02_Server-to-server/envirement_variables/node/: app.js  package-lock.json
02_Server-to-server/envirement_variables/python/: main.py
02_Server-to-server/my_first_servers/node/: app.js
02_Server-to-server/my_first_servers/python/: pyproject.toml
02_Server-to-server/server_to_server/python/: main.py  pyproject.toml
02_data/Serializing_and_Deserializing/: test.py
02_data/encoding_and_decoding/node/: index.js
02_data/encoding_and_decoding/python/: token.py
02_data/python_poetry/: main.py
02_server/envirement_variables/node/: app.js  package.json
02_server/envirement_variables/python/: main.py
02_server/server_to_server/node/: package.json
03_real_time_data_communication/date/node/: app.js
03_real_time_data_communication/date/python/: main.py
03_real_time_data_communication/server_sent_events/python_sse/: main.py  pyproject.toml
03_real_time_data_communication/short_polling/node/: app.js
03_real_time_data_communication_part_1/envirement_variables/node/: app.js
03_real_time_data_communication_part_1/envirement_variables/python/: dotenv.example  main.py  pyproject.toml
03_real_time_data_communication_part_1/my_first_servers/node/: package.json
05_real_time_communcation_part_2/node-webhook/: app.js
05_real_time_communcation_part_2/python-webhook/: pyproject.toml
05_real_time_communcation_part_3/githook_example/: githook.txt
05_real_time_communcation_part_3/node-webhook/: package.json
05_real_time_communcation_part_3/python-webhook/: main.py
07_Real_time_communication/Multipart-Forms/: index.html
08_media/MPEG_DASH/: app.js
08_media/MediaFile_between_client_to_server/: app.js  package-lock.json  package.json
09_database_intergration/backup_mysql/: backup.sql
09_database_intergration/database_migration/python-knex/: alembic.ini  pyproject.toml
09_database_intergration/database_migration/python-knex/alembic/versions/: 010cb73d1c26_create_account_table.py
10_open_API_dokumenation_and_redis/node_openAPI/: app.js  package.json
10_open_API_dokumenation_and_redis/python_openAPI/: pyproject.toml
10_open_API_dokumenation_and_redis/python_openAPI/routers/: __init__.py  spacecraftRouter.py
11_graphQL/node_example/: app.js  package-lock.json  package.json
11_graphQL/web_crawling/: pyproject.toml  spider.py
11_graphQL/web_scraping/: app.js  index.html  package-lock.json  package.json
homework/00_homework/: app.js  file_handling.js  package-lock.json
homework/01_homework/: app.js  file_handling.js  package-lock.json  package.json
homework/01_homework(filehandling)/: app.js
homework/02_homework/: app.js  file_handling.js  package.json
homework/02_homework(file_handling_part2)/: package-lock.json  package.json
homework/03_homework/: app.js  file_handling.py  index.js  main.py  pyproject.toml
homework/03_homework(file_handling_part3)/: file_handling.py  main.py  package-lock.json
homework/03_homework/public/: index.html
homework/03_homework_and_DB_OPG/: app.js
homework/04_homework/: package.json
homework/06_homework/: package-lock.json  websocketServer.js
homework/06_homework(websockets)/: app.js  client.html  package.json
homework/07_homework/: app.js  client1.html  client2.html
homework/09_homework/: index.js  knexfile.js  package-lock.json  package.json
homework/Mandatory1/: README
homework/Mandatory2/: README
homework/database_projekt/: create_persons.sql  setup_script.sql
homework/my_files/: my.csv  my.json  my.txt  my.xml  my.yaml
test/: main.py  pyproject.toml
(+85 files in other folders)
