[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Alex8943 <65241585+Alex8943@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
