[tool.poetry]
name = "python-poetry"
version = "0.1.0"
description = ""
authors = ["Alex8943 <65241585+Alex8943@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
emoji = "^2.10.1"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
