[tool.poetry]
name = "python-openapi"
version = "0.1.0"
description = ""
authors = ["Alex8943 <65241585+Alex8943@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_openapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
