[tool.poetry]
name = "python-sse"
version = "0.1.0"
description = ""
authors = ["Alex8943 <65241585+Alex8943@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_sse"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
